--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
       <link rel="stylesheet" href="./style.css">
+      <link href="https://fonts.googleapis.com/css?family=Kelly+Slab" rel="stylesheet"> 
     <title>No Meat May</title>
   </head>
   <body>
